# yolo26-seg-hand

./: .gitignore  AGENTS.md  README.md  export_onnx.py  infer_onnx.py  label_hagrid.py  prepare_dataset.py  pyproject.toml  train.py  webcam.py
